@@ -24,6 +24,10 @@ production.
 * Preferences 'watchcreations' and 'watchdefault' ("Add pages I create and files
   I upload to my watchlist", "Add pages and files I edit to my watchlist") are
   now enabled by default.
+* A new configuration variable, $wgShowSigButtonInContentNamespaces, controls
+  whether users see a "signature" button on the edit toolbar in content
+  namespaces. It is set to false by default - wikis that use signatures on
+  content pages should set it to true to preserve the old behavior.
 
 === New features in 1.23 ===
 * ResourceLoader can utilize the Web Storage API to cache modules client-side.
